--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -606,15 +606,15 @@
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(124,'/LYJDCX/LYJDCX_GNY','null')">自驾游</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(172,'/SHFWCX/SHFWCX_WX','null')">国外</span>
+			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(127,'/LYJDCX/LYJDCX_CJY','null')">国外</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(127,'/LYJDCX/LYJDCX_CJY','null')">签证</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1291,'/LYJDCX/LYJDCX_QZFW','null')">签证</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(127,'/LYJDCX/LYJDCX_CJY','null')">机票</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(128,'/LYJDCX/LYJDCX_JP','null')">机票</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(127,'/LYJDCX/LYJDCX_CJY','null')">跟团</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(126,'/LYJDCX/LYJDCX_CJY','null')">跟团</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(197,'/CLCX/CLCX_QCWXBY','null')">导游</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(129,'/LYJDCX/LYJDCX_DYDDR','null')">导游</li>
 			</ul>
 			<p class="p_body_middle_left_title_small">装修建材</p>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
@@ -641,19 +641,19 @@
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(140,'/HQSYCX/HQSYCX_HQYP','null')">用品</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(134,'/HQSYCX/HQSYCX_SY','null')">司仪</li>	
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(141,'/HQSYCX/HQSYCX_SY','null')">司仪</li>	
 			</ul>
 			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(144,'/HQSYCX/HQSYCX_HSSY','null')">摄影</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(144,'/HQSYCX/HQSYCX_HSSY','null')">婚纱</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(143,'/HQSYCX/HQSYCX_HSSY','null')">婚纱</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">跟拍</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(142,'/HQSYCX/HQSYCX_HLGP','null')">跟拍</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">写真</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(143,'/HQSYCX/HQSYCX_HSSY','null')">写真</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(135,'/ZXJCCX/ZXJCCX_JFJS','null')">儿童</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(143,'/HQSYCX/HQSYCX_HSSY','null')">儿童</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(134,'/ZXJCCX/ZXJCCX_JJ','null')">策划</li>	
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(144,'/HQSYCX/HQSYCX_HQGS','TGFW=18')">策划</li>	
 			</ul>
 			<p class="p_body_middle_left_title_small">休闲娱乐</p>
 			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(48,'/XXYLCX/XXYLCX_XYWQ','null')">休闲</span>
@@ -662,7 +662,7 @@
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(49,'/XXYLCX/XXYLCX_ZLAM','null')">足疗按摩</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(45,'/XXYLCX/XXYLCX_YDJB','null')">棋牌室</li>	
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(45,'/XXYLCX/XXYLCX_YDJB','LB=34')">棋牌室</li>	
 			</ul>
 			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(45,'/XXYLCX/XXYLCX_YDJB','null')">娱乐</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
