--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/LR/LRXX_MJ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/LR/LRXX_MJ.css
@@ -28,7 +28,7 @@
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 16px;margin-left: 30px; }
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 42px;width: 100%;padding: 20px 30px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_left{ color: #999999;float: left;}
-.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_right{ float: left;margin-left: 20px;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_right{ margin-left: 20px;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh{ border: 1px solid #bc6ba6;margin: 30px;padding: 16px 30px;width: 290px;height: 70px;font-size: 28px;color: #bc6ba6;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh .img_body_left_body_right_lxdh{ width: 25px;height: 25px;margin-right: 10px;}
 /*首页_主体_左部_详情*/
