--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/LR/LRXX_MFHF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/LR/LRXX_MFHF.css
@@ -10,7 +10,6 @@
 .div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;}
 .div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img{width: 470px;height: 350px;display:block;text-align:center;vertical-align:middle;line-height:350px;}
-/*.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show{ width: 460px;height: 350px;}*/
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show:hover{ cursor: pointer;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list{ width: 400px;overflow: hidden;display: inline-block;float: left;}
 .div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{width: 2000px;height: 76px;padding: 0;margin-top: 10px;float: left;}
@@ -28,7 +27,7 @@
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 16px;margin-left: 30px; }
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 30px;width: 100%;padding: 20px 30px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_left{ color: #999999;float: left;}
-.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_right{ float: left;margin-left: 20px;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_right{ margin-left: 20px;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh{ border: 1px solid #bc6ba6;margin: 30px;padding: 16px 30px;width: 290px;height: 70px;font-size: 28px;color: #bc6ba6;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh .img_body_left_body_right_lxdh{ width: 25px;height: 25px;margin-right: 10px;}
 /*首页_主体_左部_详情*/
