--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -645,7 +645,7 @@
 			</ul>
 			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(144,'/HQSYCX/HQSYCX_HSSY','null')">摄影</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(143,'/HQSYCX/HQSYCX_HSSY','null')">婚纱</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(143,'/HQSYCX/HQSYCX_HSLF','null')">婚纱</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(142,'/HQSYCX/HQSYCX_HLGP','null')">跟拍</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
@@ -692,87 +692,87 @@
 		<div id="div_body_middle_left_JWHS" class="div_body_middle_left_section" style="width: 350px;height:410px;">
 			<p class="p_body_middle_left_title" onclick="ToEJSY('ES')" id="p_body_middle_left_title_ES" style="border-bottom-color: #f2f2f2; border-bottom-width: 1px; border-bottom-style: solid;">旧物回收</p>
 			<p class="p_body_middle_left_title_small">热门回收</p>			
-			<span class="span_body_middle_left_title_small_fw">电脑</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">电脑</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">笔记本</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">笔记本</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">显示器</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">显示器</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">平板</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">平板</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">台式机</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">台式机</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw">手机</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">数码</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">苹果</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=505')">手机</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">三星</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">摄像机</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">小米</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">单反</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">华为</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">导航仪</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw">金银</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">金银</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">黄金</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">黄金</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">白银</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">白银</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">铂金</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">铂金</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">钯金</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">钯金</li>
 			</ul>
 			<p class="p_body_middle_left_title_small">生活回收</p>			
-			<span class="span_body_middle_left_title_small_fw">家具</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">家具</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">床</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">床</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">沙发</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">沙发</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">衣柜</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">衣柜</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">桌椅</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">桌椅</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw">电器</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">电器</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">空调</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">空调</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">电视</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">电视</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">冰箱</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">冰箱</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">洗衣机</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">洗衣机</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw">服饰</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">服饰</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">童装</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">童装</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">鞋子</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">鞋子</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">布料</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">布料</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">包包</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">包包</li>
 			</ul>
 			<p class="p_body_middle_left_title_small">商业回收</p>
-			<span class="span_body_middle_left_title_small_fw">礼品</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">礼品</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">燕窝</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">燕窝</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">海参</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">海参</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">鹿茸</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">鹿茸</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">名酒</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">名酒</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw">设备</span>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">设备</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(130,'/ZXJCCX/ZXJCCX_JZFW','null')">工厂</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">工厂</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(131,'/ZXJCCX/ZXJCCX_GZFW','null')">机械</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">机械</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">酒店</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">酒店</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(133,'/ZXJCCX/ZXJCCX_JC','null')">更多>></li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','null')">更多>></li>
 			</ul>
 		</div>
 	</div>
